fixed most popupMenu bugs, break on mobile landscape

--- a/src/App/Sequencer/MenuBar/_menuBar.scss
+++ b/src/App/Sequencer/MenuBar/_menuBar.scss
@@ -4,6 +4,7 @@
 
 #popupMenuPortal {
   @extend %noEventsLayerAbs;
+  max-width: 1440px;
   top: 0;
   z-index: 1000;
   overflow: hidden;
